Fix. Form width - one gap less than parent instead of last child width

--- a/src/components/comment/style.css
+++ b/src/components/comment/style.css
@@ -1,6 +1,15 @@
 .Comment {
-  padding: 0 40px 30px;
+  padding: 30px 0px 0 30px;
   font-size: 12px;
+}
+
+.Comment.Comment_root {
+  padding-left: 40px;
+  padding-right: 30px;
+}
+
+.Comment.Comment_deepest {
+  padding-left: 0;
 }
 
 .Comment-title-name {
