--- a/src/components/login-invite/style.css
+++ b/src/components/login-invite/style.css
@@ -4,7 +4,6 @@
 }
 
 .LoginInvite_root {
-  margin-top: 0;
   padding: 0 40px 30px;
 }
 
